--- a/script/diagnostic-templates/template-bayes-report.Rmd
+++ b/script/diagnostic-templates/template-bayes-report.Rmd
@@ -6,7 +6,7 @@ output:
     toc_float: true
     depth: 2
 params:
-  run: "001"
+  run: "1000"
   logDV: FALSE
   modelDir: !r here::here("model/pk")
   script: "template-bayes-report.Rmd"
@@ -18,13 +18,11 @@ params:
   include_plots: TRUE
 # sims_output_path: either of
 #   1. path of RDS file containing simulated output (EPRED, IPRED, EWRES, NPDE)
-#   2. "" to use only NONMEM output
-  sims_output_path: ""
-  #sims_output_path: !r here::here("model/nonmem/pk/001/diag-sims-001.rds")
+#   2. "" to use only NONMEM output from `bbr.bayes::nm_join_bayes_quick()`
+  # sims_output_path: ""
+  sims_output_path: !r here::here("model/pk/1000/diag-sims-1000.rds")
 # plot_ci: if true, include CIs on DV vs prediction plots (only relevant when sims_output_path is not "")
   plot_ci: FALSE
-# TODO infer from dirs
-  n_chains: 4
 # n_thin: select every `n_thin` samples for trace/density plots (from ctl - 4000 niters)
   n_thin: 10
 # n_thin2: select every `n_thin * n_thin2` samples for Bayes pairs plots (from ctl - 4000 niters)
@@ -40,28 +38,20 @@ params:
 
 # Run number `r params$run`
 
-# Purpose
-
-To produce a set of diagnostic plots that will be included in the report. Please note
-that these plots are just meant to provide an example of what could be created and how. 
-They are not an exhaustive list of every possible plot and were chosen with the project 
-aims in mind. 
-
-While this _should_ give users examples of plots generated with the most up-to-date 
-packages and methods, we're always happy to have feedback. If you know of more 
-efficient methods or want to suggest alternative ways of plotting the figures 
-please open an issue with the details. 
-
+To produce a set of diagnostic plots that will be included in a report. Please
+note that these plots are just meant to provide an example of what could be
+created and how. They are not an exhaustive list of every possible plot and were
+chosen with the project aims in mind.
 
 # Set up
 
 ```{r setup_general, include = F}
 ### General script set-up
 knitr::opts_chunk$set(
-  echo = TRUE, 
-  warning = FALSE, 
+  echo = TRUE,
+  warning = FALSE,
   message = FALSE,
-  fig.height = 5, 
+  fig.height = 5,
   fig.width = 5
 )
 
@@ -69,48 +59,37 @@ knitr::opts_chunk$set(
 suppressPackageStartupMessages(library(tidyverse))
 library(pmplots)
 library(bbr)
-library(PKPDmisc)
-library(yaml)
+library(bbr.bayes)
+# library(PKPDmisc)
+# library(yaml)
 library(yspec)
 library(mrggsave)
 library(pmtables)
 library(mrgsolve)
 library(furrr)
-#library(npde)
+# library(npde)
 library(patchwork)
 library(loo)
-suppressPackageStartupMessages(library(rstan))
-suppressPackageStartupMessages(library(glue))
-suppressPackageStartupMessages(library(cowplot))
-# use_bbi(.version = "v3.1.0") ## << need this version to run this script
-# bbi_version()
-
-# added this because npde imports mclust (which uses its own map())
-#map <- purrr::map
+library(glue)
+library(cowplot)
+# suppressPackageStartupMessages(library(rstan))
 
 ### Directories ----------------------------
-figDir <- here::here("deliv", "figure","report")
-tabDir <- here::here("deliv", "table","report")
+figDir <- here::here("deliv", "figure", "report")
 dataDir <- here::here("data")
 sourceDataDir <- file.path(dataDir, "source")
 derivedDataDir <- file.path(dataDir, "derived")
 
-#if (!file.exists(figDir)) dir.create(figDir)
-#if (!file.exists(tabDir)) dir.create(tabDir)
+# if (!file.exists(figDir)) dir.create(figDir)
 
 thisScript <- params$script
-options(mrg.script = params$script,
-  mrggsave.dev = "pdf,png")
+options(
+  mrg.script = params$script,
+  mrggsave.dev = "pdf,png"
+)
 
 theme_set(pmplots::pm_theme())
 
-if (params$sims_output_path != "") {
-  if (!file.exists(params$sims_output_path)) {
-    stop(glue("File {params$sims_output_path} does not exist"))
-  } else {
-    sims <- readRDS(params$sims_output_path)
-  }
-}
 if (params$plot_ci & params$sims_output_path == "") {
   stop("Set `sims_output_path` (after running simulations) in order to plot CIs")
 }
@@ -119,85 +98,9 @@ if (params$plot_ci & params$sims_output_path == "") {
 
 ```{r load_any_functions, include = F}
 ### Source function scripts
-source(here::here("script/functions-diagnostics-npde.R"))
+# source(here::here("script/functions-diagnostics-npde.R"))
 source(here::here("script/functions-diagnostics-rhat-ess.R"))
-source(here::here("script/functions-model.R")) # need this for the `redataset` function
-```
-
-```{r desc_test, include = F}
-# Descriptive text that depends on the settings used for diagnostic simulations
-# (and whether diagnostic simulations were run at all)
-
-ind_pred_text <- glue(
-  "Individual predictions are medians of the values of IPRED output by NONMEM
-  for each of the {params$n_chains} chains."
-)
-etas_text <- glue(
-  "ETAs are medians of the values
-  of ETA output by NONMEM for each of the {params$n_chains} chains."
-)
-if (params$sims_output_path == "") {
-  
-  # Medians of NONMEM output only
-  pop_pred_text <- glue(
-    "Population predictions are medians of the values of EPRED output by NONMEM
-    for each of the {params$n_chains} chains."
-  )
-  dv_pred_text <- glue(pop_pred_text, ind_pred_text, .sep = " ")
-  npde_text <- glue(
-    "Normalized prediction distribution errors (NPDE) are medians of the values
-    of NPDE output by NONMEM for each of the {params$n_chains} chains."
-  )
-  ewres_text <- glue(
-    "Expected weighted residuals (EWRES) are medians of the values
-    of EWRES output by NONMEM for each of the {params$n_chains} chains."
-  )
-  
-} else {
-  
-  # Medians (and optionally upper/lower percentiles) from simulations
-  pop_pred_text <- glue(
-    "Population predictions are medians of {sims$n_post} simulated values
-    incorporating between-{ifelse(sims$resid_var, ' and within-', '')}subject
-    variability, as well as uncertainty in population parameter estimates via
-    sampling from the posterior distribution."
-  )
-  if (sims$ipred_sim) {
-    ind_pred_text <- glue(
-      "Individual predictions are medians of {sims$n_post} simulated values
-      incorporating conditional estimates of individual parameters and include
-      {ifelse(sims$resid_var, 'within-subject variability, as well as', '')}
-      uncertainty in population parameter estimates via sampling from the
-      posterior distribution."
-    )
-    etas_text <- glue(
-      "ETAs are medians of {sims$n_post} posterior ETAs across
-      the {params$n_chains} chains."
-    )
-  }
-  dv_pred_text <- glue(pop_pred_text, ind_pred_text, .sep = " ")
-  if (params$plot_ci) {
-    dv_pred_text <- glue(
-      dv_pred_text,
-      " Red error bars represent {sims$ci_level}% CIs."
-    )
-  }
-  npde_text <- glue(
-    "Normalized prediction distribution errors (NPDE) are Monte-Carlo generated
-    diagnostics, using {sims$n_post} simulations incorporating
-    between-{ifelse(sims$resid_var, ' and within-', '')}subject variability,
-    as well as uncertainty in population parameter estimates via
-    sampling from the posterior distribution."
-  )
-  ewres_text <- glue(
-    "Expected weighted residuals (EWRES) are Monte-Carlo generated residuals,
-    using {sims$n_post} simulations incorporating
-    between-{ifelse(sims$resid_var, ' and within-', '')}subject variability,
-    as well as uncertainty in population parameter estimates via
-    sampling from the posterior distribution."
-  )
-  
-}
+# source(here::here("script/functions-model.R")) # need this for the `redataset` function
 ```
 
 ### Model location
@@ -222,10 +125,6 @@ if (!file.exists(thisFigDir)) dir.create(thisFigDir)
 
 ### set mrggsave figure directory here
 options(mrggsave.dir = thisFigDir)
-
-thisModelDir <- file.path(MODEL_DIR, params$run)
-
-
 ```
 
 
@@ -237,10 +136,20 @@ and LOO-CV.  If individual posteriors are not available, calculated medians of
 shrinkages reported by NONMEM instead.
 
 ```{r echo = params$include_code}
-ext <- get_chain_files(MODEL_DIR, params$run, params$n_chains, "ext") %>% 
+if (params$sims_output_path != "") {
+  if (!file.exists(params$sims_output_path)) {
+    stop(glue("File {params$sims_output_path} does not exist"))
+  } else {
+    data_joined <- readRDS(params$sims_output_path)
+  }
+} else {
+  data_joined <- nm_join_bayes_quick()
+}
+
+ext <- get_chain_files(MODEL_DIR, params$run, params$n_chains, "ext") %>%
   filter(ITERATION > 0)
 
-#TODO modify build_path_from_model to work with chains
+# TODO modify build_path_from_model to work with chains
 fn_iph <- file.path(
   MODEL_DIR,
   params$run,
@@ -248,42 +157,38 @@ fn_iph <- file.path(
   glue("{params$run}_{params$n_chains}.iph")
 )
 if (file.exists(fn_iph)) {
-  
-  iph <- get_chain_files(MODEL_DIR, params$run, params$n_chains, "iph") %>% 
+  iph <- get_chain_files(MODEL_DIR, params$run, params$n_chains, "iph") %>%
     filter(ITERATION > 0)
   ipar <- iph %>% select(chain, ITERATION, ID, starts_with("ETA"))
   iobj <- iph %>% select(chain, ITERATION, ID, MCMCOBJ)
-  
+
   # calculate shrinkage
   shk0 <- baysh(ipar, ext)
-  
 } else {
-  
-  shk0 <- get_chain_files(MODEL_DIR, params$run, params$n_chains, "shk") %>% 
+  shk0 <- get_chain_files(MODEL_DIR, params$run, params$n_chains, "shk") %>%
     # From Intro to NM 7: "Type 4=%Eta shrinkage SD version"
-    filter(TYPE == 4) %>% 
-    select(starts_with("ETA")) %>% 
-    summarise(across(.fns = median)) %>% 
+    filter(TYPE == 4) %>%
+    select(starts_with("ETA")) %>%
+    summarise(across(.fns = median)) %>%
     pivot_longer(everything(), names_to = "eta", values_to = "shrinkage")
-  
 }
 
-shk <- shk0 %>% 
+shk <- shk0 %>%
   mutate(
     shrinkage = sig(shrinkage),
     eta = str_extract(eta, "[\\d]+"),
     parameter = glue("OMEGA({eta},{eta})")
-  ) %>% 
+  ) %>%
   select(-eta)
 
 ## Individual objective function values (log-likelihoods)
-#fn_iobj <- file.path(
+# fn_iobj <- file.path(
 #  MODEL_DIR,
 #  params$run,
 #  glue("{params$run}_{params$n_chains}"),
 #  "iobj.txt"
-#)
-#if (file.exists(fn_iobj)) {
+# )
+# if (file.exists(fn_iobj)) {
 #  iobj <- map(seq_len(params$n_chains), function(.chain) {
 #    data.table::fread(
 #      file = file.path(
@@ -293,30 +198,27 @@ shk <- shk0 %>%
 #        "iobj.txt"
 #      ),
 #      header = FALSE
-#    ) %>% 
-#      as_tibble() %>% 
-#      select(-1) %>% 
+#    ) %>%
+#      as_tibble() %>%
+#      select(-1) %>%
 #      select_if(~ sum(.x) != 0)
 #  })
-#}
+# }
 
-#data.table::fread(file = file.path(
+# data.table::fread(file = file.path(
 #  MODEL_DIR,
 #  params$run,
 #  glue("{params$run}_{1}"),
 #  "iobj.txt"),
 #  header = FALSE
-#) %>% 
+# ) %>%
 #  names
-
 ```
   
 
 # Model details
 
-## 1st chain details
-
-A summary of high-level model details using only output from the first chain.
+A summary of high-level model details.
 
 Read in the model details using `read_model`. Details stored in the `mod` object
 can be used to identify the location of the source data (used in $DATA) - to see
@@ -359,19 +261,19 @@ n_theta <- length(sum$parameter_names$theta)
 n_omega <- length(sum$parameter_names$omega)
 n_sigma <- length(sum$parameter_names$sigma)
 
-size_omega <- (-1 + sqrt(1 + 4*1*n_omega*2)) / 2
-size_sigma <- (-1 + sqrt(1 + 4*1*n_sigma*2)) / 2
+size_omega <- (-1 + sqrt(1 + 4 * 1 * n_omega * 2)) / 2
+size_sigma <- (-1 + sqrt(1 + 4 * 1 * n_sigma * 2)) / 2
 
 fix_diag <- tibble(
   parameter = sum$parameter_names %>% do.call(c, .),
-  fixed = sum$parameters_data[[1]]$fixed %>% do.call(c, .) %>% as.logical,
+  fixed = sum$parameters_data[[1]]$fixed %>% do.call(c, .) %>% as.logical(),
   diag = c(rep(NA, n_theta), block(size_omega), block(size_sigma))
 )
 
 ext_tbl <- ext %>%
   filter(ITERATION > 0) %>%
   select(-ITERATION, -MCMCOBJ)
-n_param <- ncol(ext_tbl) - 1  # don't include chain
+n_param <- ncol(ext_tbl) - 1 # don't include chain
 n_iter <- max(ext$ITERATION)
 param_array <- array(
   double(n_iter * params$n_chains * n_param),
@@ -379,18 +281,18 @@ param_array <- array(
   dimnames = list(NULL, NULL, setdiff(names(ext_tbl), "chain"))
 )
 for (.chain in seq_len(params$n_chains)) {
-  param_array[,.chain,] <- ext_tbl %>%
+  param_array[, .chain, ] <- ext_tbl %>%
     filter(chain == .chain) %>%
     select(-chain) %>%
     as.matrix()
 }
 
 ptable <- rstan::monitor(param_array, warmup = 0, print = FALSE) %>%
-  as.matrix %>%
+  as.matrix() %>%
   as.data.frame() %>%
   mutate(
     parameter = rownames(.)
-    #mean_med_diff = (mean - `50%`) / `50%` * 100
+    # mean_med_diff = (mean - `50%`) / `50%` * 100
   ) %>%
   mutate(across(c(-n_eff, -Bulk_ESS, -Tail_ESS, -valid, -parameter), sig)) %>%
   left_join(fix_diag) %>%
@@ -403,8 +305,8 @@ ptable %>%
   ) %>%
   select(parameter, mean, median, "95% CI", Bulk_ESS, Tail_ESS, Rhat) %>%
   left_join(shk, by = "parameter") %>%
-  knitr::kable(caption = "Summary of model parameter estimates.") #%>%
-  #kable_styling(bootstrap_options = "striped", full_width = F)
+  knitr::kable(caption = "Summary of model parameter estimates.") # %>%
+# kable_styling(bootstrap_options = "striped", full_width = F)
 ```
 
 ## LOO-CV
@@ -414,7 +316,7 @@ Pareto smoothed importance sampling (PSIS). This is used for model comparison,
 similar to the -2LL objective function for non-Bayesian models.
 
 ```{r echo = params$include_code}
-#if (file.exists(fn_iobj)) {
+# if (file.exists(fn_iobj)) {
 #  n_iter <- nrow(iobj2[[1]])
 #  n_id <- ncol(iobj2[[1]])
 #  iobj_array2 <- array(
@@ -424,12 +326,12 @@ similar to the -2LL objective function for non-Bayesian models.
 #  for (.chain in seq_len(params$n_chains)) {
 #    iobj_array2[,.chain,] <- as.matrix(iobj2[[.chain]])
 #  }
-#  
+#
 #  rel_n_eff <- relative_eff(exp(iobj_array2))
 #  loo(iobj_array2, r_eff = rel_n_eff, cores = 2)
-#} else {
+# } else {
 #  print("No iobj.txt files found, so LOO-CV was not calculated.")
-#}
+# }
 
 if (file.exists(fn_iph)) {
   n_iter <- max(iobj$ITERATION)
@@ -439,13 +341,13 @@ if (file.exists(fn_iph)) {
     dim = c(n_iter, params$n_chains, n_id)
   )
   for (.chain in seq_len(params$n_chains)) {
-    iobj_array[,.chain,] <- iobj %>% 
-      filter(chain == .chain) %>% 
-      arrange(ID, ITERATION) %>% 
-      pull(MCMCOBJ) %>% 
+    iobj_array[, .chain, ] <- iobj %>%
+      filter(chain == .chain) %>%
+      arrange(ID, ITERATION) %>%
+      pull(MCMCOBJ) %>%
       as.matrix()
   }
-  
+
   rel_n_eff <- relative_eff(exp(iobj_array))
   loo(iobj_array, r_eff = rel_n_eff, cores = 2)
 } else {
@@ -492,58 +394,130 @@ included within the `distinct` function.
 
 ```{r read_in_data, echo = params$include_code, message=FALSE}
 # Get original dataset and NONMEM output using median table values
-data0 <- data.table::fread(get_data_path(sum), na.strings = ".") %>% 
+data0 <- data.table::fread(get_data_path(sum), na.strings = ".") %>%
   as_tibble()
 if (params$sims_output_path != "") {
-# Use simulated values
+  # Use simulated values
   data0 <- left_join(sims$data, data0, by = "NUM")
 } else {
-# Use NONMEM output (median table values) for all
+  # Use NONMEM output (median table values) for all
   tab <- get_chain_files(MODEL_DIR, params$run, params$n_chains, "tab",
-                         .chain_in_name = FALSE) %>% 
-    group_by(NUM) %>% 
-    summarise(across(.fns = median)) %>% 
+    .chain_in_name = FALSE
+  ) %>%
+    group_by(NUM) %>%
+    summarise(across(.fns = median)) %>%
     select(-chain)
-  
+
   # ### Included partab for ETAs - CHECK needed when simulations run correctly
   # partab <- get_par_chain_files(MODEL_DIR, params$run, params$n_chains, "tab",
-  #                        .chain_in_name = FALSE) %>% 
-  #   group_by(NUM) %>% 
-  #   summarise(across(.fns = median)) %>% 
+  #                        .chain_in_name = FALSE) %>%
+  #   group_by(NUM) %>%
+  #   summarise(across(.fns = median)) %>%
   #   select(-chain)
-  
+
   keep1 <- c("NUM", setdiff(names(tab), names(data0)))
   # keep2 <- c("NUM", setdiff(names(partab), names(data0)))
-  data0 <- left_join(tab[,keep1], data0, by = "NUM")
+  data0 <- left_join(tab[, keep1], data0, by = "NUM")
   # data0 <- left_join(partab[,keep2], data0, by = "NUM")
-
 }
 
 # filter to observation rows only
-data <- data0 %>% 
-  filter(EVID == 0) %>% 
+data <- data0 %>%
+  filter(EVID == 0) %>%
   yspec_add_factors(spec, .suffix = "")
 
-if(isTRUE(params$logDV)) {
-  data <- mutate(data, 
-                 LNPRED = PRED, 
-                 PRED = exp(PRED),
-  )  
+if (isTRUE(params$logDV)) {
+  data <- mutate(data,
+    LNPRED = PRED,
+    PRED = exp(PRED),
+  )
 }
 
-# filter to single row per ID and include factors 
-id <- distinct(data, ID, .keep_all = TRUE) 
+# filter to single row per ID and include factors
+id <- distinct(data, ID, .keep_all = TRUE)
+```
+
+```{r desc_test, include = F}
+# Descriptive text that depends on the settings used for diagnostic simulations
+# (and whether diagnostic simulations were run at all)
+
+ind_pred_text <- glue(
+  "Individual predictions are medians of the values of IPRED output by NONMEM
+  for each of the {params$n_chains} chains."
+)
+etas_text <- glue(
+  "ETAs are medians of the values
+  of ETA output by NONMEM for each of the {params$n_chains} chains."
+)
+if (params$sims_output_path == "") {
+  # Medians of NONMEM output only
+  pop_pred_text <- glue(
+    "Population predictions are medians of the values of EPRED output by NONMEM
+    for each of the {params$n_chains} chains."
+  )
+  dv_pred_text <- glue(pop_pred_text, ind_pred_text, .sep = " ")
+  npde_text <- glue(
+    "Normalized prediction distribution errors (NPDE) are medians of the values
+    of NPDE output by NONMEM for each of the {params$n_chains} chains."
+  )
+  ewres_text <- glue(
+    "Expected weighted residuals (EWRES) are medians of the values
+    of EWRES output by NONMEM for each of the {params$n_chains} chains."
+  )
+} else {
+  # Medians (and optionally upper/lower percentiles) from simulations
+  pop_pred_text <- glue(
+    "Population predictions are medians of {sims$n_post} simulated values
+    incorporating between-{ifelse(sims$resid_var, ' and within-', '')}subject
+    variability, as well as uncertainty in population parameter estimates via
+    sampling from the posterior distribution."
+  )
+  if (sims$ipred_sim) {
+    ind_pred_text <- glue(
+      "Individual predictions are medians of {sims$n_post} simulated values
+      incorporating conditional estimates of individual parameters and include
+      {ifelse(sims$resid_var, 'within-subject variability, as well as', '')}
+      uncertainty in population parameter estimates via sampling from the
+      posterior distribution."
+    )
+    etas_text <- glue(
+      "ETAs are medians of {sims$n_post} posterior ETAs across
+      the {params$n_chains} chains."
+    )
+  }
+  dv_pred_text <- glue(pop_pred_text, ind_pred_text, .sep = " ")
+  if (params$plot_ci) {
+    dv_pred_text <- glue(
+      dv_pred_text,
+      " Red error bars represent {sims$ci_level}% CIs."
+    )
+  }
+  npde_text <- glue(
+    "Normalized prediction distribution errors (NPDE) are Monte-Carlo generated
+    diagnostics, using {sims$n_post} simulations incorporating
+    between-{ifelse(sims$resid_var, ' and within-', '')}subject variability,
+    as well as uncertainty in population parameter estimates via
+    sampling from the posterior distribution."
+  )
+  ewres_text <- glue(
+    "Expected weighted residuals (EWRES) are Monte-Carlo generated residuals,
+    using {sims$n_post} simulations incorporating
+    between-{ifelse(sims$resid_var, ' and within-', '')}subject variability,
+    as well as uncertainty in population parameter estimates via
+    sampling from the posterior distribution."
+  )
+}
 ```
 
 
 # Convergence diagnostic plots
 
 ```{r echo = params$include_code}
-ext_plot <- ext %>% 
+ext_plot <- ext %>%
   # thinning: take every nth sample
-  filter(row_number() %% params$n_thin == 0) %>% 
-  pivot_longer(-c(ITERATION, chain)) %>% 
-  left_join(fix_diag %>% rename(name = parameter)) %>% 
+  filter(row_number() %% params$n_thin == 0) %>%
+  pivot_longer(-c(ITERATION, chain)) %>%
+  left_join(fix_diag %>% rename(name = parameter)) %>%
   filter(!fixed)
 if (!params$plot_offdiag) ext_plot <- ext_plot %>% filter(is.na(diag) | diag)
 ```
@@ -557,7 +531,7 @@ stationary distribution.
 p <- map(unique(ext_plot$name), function(.x) {
   # print(.x)
   df <- ext_plot %>%
-    filter(name == .x) %>% 
+    filter(name == .x) %>%
     select(ITERATION, chain, value)
   if (min(df$value) == max(df$value)) {
     return(NULL)
@@ -573,10 +547,10 @@ p <- map(unique(ext_plot$name), function(.x) {
   #   labs(x = "Estimate", y = "Density")
   p0 <- p1 / p2 + plot_annotation(.x)
   return(p0)
-}) %>% 
+}) %>%
   purrr::compact() # remove NULL elements of list
 
-pDensity = p
+pDensity <- p
 ```
 
 ```{r include_trace_density, eval=params$include_plots, include=params$include_plots, echo=F, message=FALSE}
@@ -586,7 +560,7 @@ p
 ```{r save_trace_density, include = FALSE, eval = params$run_mrggsave, message=FALSE}
 mrggsave(
   p,
-  params$script, 
+  params$script,
   stem = c(params$run, "trace-density"),
   dir = thisFigDir,
   width = 5,
@@ -604,9 +578,9 @@ Look for any strong correlation between parameters, indicating possible
 over-parameterisation.
 
 ```{r param_pairs_plots, echo = params$include_code, message=FALSE}
-ext_pairs <- ext_plot %>% 
-  select(-fixed, -diag) %>% 
-  pivot_wider(names_from = "name", values_from = "value") %>% 
+ext_pairs <- ext_plot %>%
+  select(-fixed, -diag) %>%
+  pivot_wider(names_from = "name", values_from = "value") %>%
   # further thinning: take every nth sample again
   filter(row_number() %% params$n_thin2 == 0)
 
@@ -621,19 +595,19 @@ if (is.null(params$theta_cov)) {
   names_fixed_noncov <- setdiff(names_theta, names_fixed_cov)
 }
 names_random <- names(ext_pairs) %>%
-  str_subset("^OMEGA|^SIGMA") %>% 
+  str_subset("^OMEGA|^SIGMA") %>%
   # pairs_plot() doesn't like names with parentheses without this format
   str_replace("(.*)", "\\1 // \\1")
 
-p_fixed_noncov <- ext_pairs %>% 
+p_fixed_noncov <- ext_pairs %>%
   pairs_plot(names_fixed_noncov, progress = FALSE) +
   rot_x(45)
-p_random <- ext_pairs %>% pairs_plot(names_random)+
+p_random <- ext_pairs %>% pairs_plot(names_random) +
   rot_x(45)
 
 if (!is.null(params$theta_cov)) {
-  p_fixed_cov <- ext_pairs %>% pairs_plot(names_fixed_cov, progress = FALSE)+
-  rot_x(45)
+  p_fixed_cov <- ext_pairs %>% pairs_plot(names_fixed_cov, progress = FALSE) +
+    rot_x(45)
 }
 ```
 
@@ -646,7 +620,7 @@ p_random
 ```{r save_param_pairs, include = FALSE, eval = params$run_mrggsave, message=FALSE}
 mrggsave(
   p_fixed_noncov,
-  params$script, 
+  params$script,
   stem = c(params$run, "pairs-fixed-noncov"),
   dir = thisFigDir,
   width = 9,
@@ -655,7 +629,7 @@ mrggsave(
 if (!is.null(params$theta_cov)) {
   mrggsave(
     p_fixed_cov,
-    params$script, 
+    params$script,
     stem = c(params$run, "pairs-fixed-cov"),
     dir = thisFigDir,
     width = 9,
@@ -664,7 +638,7 @@ if (!is.null(params$theta_cov)) {
 }
 mrggsave(
   p_random,
-  params$script, 
+  params$script,
   stem = c(params$run, "pairs-random"),
   dir = thisFigDir,
   width = 9,
@@ -684,15 +658,14 @@ Plots Bulk and Tail ESS versus iteration to check that ESS increases linearly.
 ```{r ess_vs_sample_plots, echo = params$include_code, message=FALSE}
 p0 <- map(unique(ext_plot$name), function(.x) {
   plot_change_ess(param_array, .x)
-}) %>% 
+}) %>%
   purrr::compact() # remove NULL elements of list
 
-pESSsample = p0
+pESSsample <- p0
 
 p <- map(1:length(unique(ext_plot$name)), function(.x) {
   p0[[.x]] + plot_annotation((unique(ext_plot$name))[.x])
-}) 
-
+})
 ```
 
 ```{r include_ess_vs_sample_plots, eval=params$include_plots, include=params$include_plots, echo=F, message=FALSE}
@@ -702,7 +675,7 @@ p
 ```{r save_ess_vs_sample_plots, include = FALSE, eval = params$run_mrggsave, message=FALSE}
 mrggsave(
   p,
-  params$script, 
+  params$script,
   stem = c(params$run, "ess-vs-sample"),
   dir = thisFigDir,
   width = 5,
@@ -722,16 +695,14 @@ distributions that the iterative algorithm fails to explore efficiently.
 ```{r ess_vs_quantile_plots, echo = params$include_code, message=FALSE}
 p0 <- map(unique(ext_plot$name), function(.x) {
   plot_quantile_ess(param_array, .x)
-}) #%>% 
-  #purrr::compact() # remove NULL elements of list
+}) # %>%
+# purrr::compact() # remove NULL elements of list
 
-pESSquantile = p0
+pESSquantile <- p0
 
 p <- map(1:length(unique(ext_plot$name)), function(.x) {
   p0[[.x]] + plot_annotation((unique(ext_plot$name))[.x])
-}) 
-
-
+})
 ```
 
 ```{r include_ess_vs_quantile_plots, eval=params$include_plots, include=params$include_plots, echo=F, message=FALSE}
@@ -741,7 +712,7 @@ p
 ```{r save_ess_vs_quantile_plots, include = FALSE, eval = params$run_mrggsave, message=FALSE}
 mrggsave(
   p,
-  params$script, 
+  params$script,
   stem = c(params$run, "ess-vs-quantile"),
   dir = thisFigDir,
   width = 5,
@@ -756,20 +727,20 @@ rm(p, p0)
 
 
 ```{r save_combine_convergence_plots, include = FALSE, eval = params$run_mrggsave, message=FALSE}
-
 # combine density and ess plots for report
 
 p <- map(seq(1, length(unique(ext_plot$name))), function(.x) {
-  p0 <- pDensity[[.x]] | (pESSsample[[.x]] / pESSquantile[[.x]]) 
-  p0 = p0 + plot_annotation(
-  title = unique(ext_plot$name)[.x])
+  p0 <- pDensity[[.x]] | (pESSsample[[.x]] / pESSquantile[[.x]])
+  p0 <- p0 + plot_annotation(
+    title = unique(ext_plot$name)[.x]
+  )
   return(p0)
-}) #%>% 
-  #purrr::compact()
+}) # %>%
+# purrr::compact()
 
 mrggsave(
   p,
-  params$script, 
+  params$script,
   stem = c(params$run, "convergence"),
   dir = thisFigDir,
   width = 8,
@@ -789,9 +760,9 @@ The following plots assume that the preferred x-axis labels are defined here.
 
 xTIME <- "TIME //Time (h)"
 xTAD <- "TAD //Time after dose (h)"
-xPRED <-  "EPRED //Population predicted concentration"
-yEWRES <-  "EWRES //Expected weighted residual"
-yNPDE <-  "NPDE //Normalized prediction distribution error"
+xPRED <- "EPRED //Population predicted concentration"
+yEWRES <- "EWRES //Expected weighted residual"
+yNPDE <- "NPDE //Normalized prediction distribution error"
 ```
 
 ## DV vs population and individual predictions
@@ -811,10 +782,10 @@ if (params$plot_ci & !is.na(params$sims_output_path)) {
 } else {
   dvp <- dv_pred(data, x = "EPRED//Population predicted {xname}")
 }
-  
+
 # DV vs individual predictions
 if (params$plot_ci & !is.na(params$sims_output_path) &
-    "IPRED_lo" %in% names(data)) {
+  "IPRED_lo" %in% names(data)) {
   dvip <- dv_pred_ci(
     data,
     x = "IPRED//Individual predicted {xname}",
@@ -840,7 +811,7 @@ p
 ```{r save_DV_PRED, include = FALSE, eval = params$run_mrggsave, message=FALSE}
 mrggsave(
   p,
-  params$script, 
+  params$script,
   stem = c(params$run, "dv-pred-ipred"),
   dir = thisFigDir,
   width = 5,
@@ -872,8 +843,7 @@ p1 <- npde_pred(data, x = xPRED, y = "NPDE //  ")
 p2 <- npde_time(data, x = xTIME)
 p3 <- npde_tad(data, x = xTAD, y = "NPDE //  ")
 
-p <- pm_grid(list(p1, p2, p3), nrow = 3, ncol = 1) 
-
+p <- pm_grid(list(p1, p2, p3), nrow = 3, ncol = 1)
 ```
 
 ```{r include_NPDE, eval = params$include_plots, include = params$include_plots, echo = F, message = FALSE, fig.height = 7}
@@ -897,16 +867,18 @@ rm(p)
 NPDE vs continuous covariates
 
 ```{r NPDE_cont_cov_plots, echo = params$include_code, message = FALSE}
-NPDEco <- spec %>% 
-  ys_select(params$contCov) %>%   # select the covariates of interest
-  axis_col_labs(title_case = TRUE,  # converts yspec short to title_case 
-                short_max = 20)     # if yspec short is >10 characters it keeps the abbreviation
+NPDEco <- spec %>%
+  ys_select(params$contCov) %>% # select the covariates of interest
+  axis_col_labs(
+    title_case = TRUE, # converts yspec short to title_case
+    short_max = 20
+  ) # if yspec short is >10 characters it keeps the abbreviation
 
 p1 <- npde_cont(data, x = NPDEco[1])
 p2 <- npde_cont(data, x = NPDEco[2])
 p3 <- npde_cont(data, x = NPDEco[3])
 
-p <- pm_grid(list(p1, p2, p3), ncol = 1) 
+p <- pm_grid(list(p1, p2, p3), ncol = 1)
 ```
 
 ```{r include_NPDE_cont_cov, eval = params$include_plots, include = params$include_plots, echo = F, message = FALSE, fig.height = 7}
@@ -929,15 +901,14 @@ rm(p)
 NPDE vs categorical covariates.
 
 ```{r NPDE_cat_cov_plots, echo = params$include_code, message = FALSE}
-NPDEca <- spec %>% 
-  ys_select(params$catCov) %>%   # select the covariates of interest
-  axis_col_labs(title_case = TRUE)  # converts yspec short to title_case 
+NPDEca <- spec %>%
+  ys_select(params$catCov) %>% # select the covariates of interest
+  axis_col_labs(title_case = TRUE) # converts yspec short to title_case
 
 p1 <- npde_cat(data, x = NPDEca[1])
-p2 <- npde_cat(data, x = NPDEca[2]) +rot_x(45)
+p2 <- npde_cat(data, x = NPDEca[2]) + rot_x(45)
 
-p <- pm_grid(list(p1, p2), nrow = 2, ncol = 1) 
-
+p <- pm_grid(list(p1, p2), nrow = 2, ncol = 1)
 ```
 
 ```{r include_NPDE_cat_cov, eval = params$include_plots, include = params$include_plots, echo = F, message = FALSE}
@@ -993,8 +964,8 @@ pop_pred_text
 
 ```{r ewres_plots, echo = params$include_code, message=FALSE}
 p_ewres_epred <- res_pred(data, x = xPRED, y = yEWRES)
-p_ewres_time <-  res_pred(data, x = xTIME, y = yEWRES)
-p_ewres_tad <-   res_pred(data, x = xTAD, y = yEWRES)
+p_ewres_time <- res_pred(data, x = xTIME, y = yEWRES)
+p_ewres_tad <- res_pred(data, x = xTAD, y = yEWRES)
 p <- pm_grid(
   list(
     p_ewres_epred,
@@ -1013,7 +984,7 @@ p
 ```{r save_ewres, include = FALSE, eval = params$run_mrggsave, message=FALSE}
 mrggsave(
   p,
-  params$script, 
+  params$script,
   stem = c(params$run, "ewres-epred-time-tad"),
   dir = thisFigDir,
   width = 5,
@@ -1042,7 +1013,7 @@ p
 ```{r save_ewres_qq_density, include = FALSE, eval = params$run_mrggsave, message=FALSE}
 mrggsave(
   p,
-  params$script, 
+  params$script,
   stem = c(params$run, "ewres-qq-hist"),
   dir = thisFigDir,
   width = 5,
@@ -1096,10 +1067,12 @@ rm(p)
 These plots uses the yspec to automatically rename the axis labels.
 
 ```{r get_cont_cov_labels, echo = params$include_code, eval = params$run_mrggsave}
-co <- spec %>% 
-  ys_select(params$contCov) %>%     # select the covariates of interest
-  axis_col_labs(title_case = TRUE,  # converts yspec short to title_case 
-                short_max = 20)     # if yspec short is >10 characters it keeps the abbreviation
+co <- spec %>%
+  ys_select(params$contCov) %>% # select the covariates of interest
+  axis_col_labs(
+    title_case = TRUE, # converts yspec short to title_case
+    short_max = 20
+  ) # if yspec short is >10 characters it keeps the abbreviation
 ```
 
 ### ETA vs continous covariates
@@ -1110,7 +1083,7 @@ trends in the covariates for a given ETA. This may need to be edited to address
 different study specific questions
 
 ```{r eta_vs_cont_plots, echo = params$include_code, message = FALSE}
-p <- purrr::map(.x = params$etas, ~ map_wrap_eta_cont(.x, co, id, .ncol=1))
+p <- purrr::map(.x = params$etas, ~ map_wrap_eta_cont(.x, co, id, .ncol = 1))
 ```
 
 ```{r include_eta_vs_cont, eval = params$include_plots, include = params$include_plots, echo = F, message = FALSE}
@@ -1166,9 +1139,9 @@ rm(p)
 These plots uses the yspec to automatically rename the axis labels.
 
 ```{r get_cat_cov_labels, echo = params$include_code, eval = params$run_mrggsave}
-ca <- spec %>% 
-  ys_select(params$catCov) %>%   # select the covariates of interest
-  axis_col_labs(title_case = TRUE)  # converts yspec short to title_case 
+ca <- spec %>%
+  ys_select(params$catCov) %>% # select the covariates of interest
+  axis_col_labs(title_case = TRUE) # converts yspec short to title_case
 ```
 
 
@@ -1183,14 +1156,13 @@ address.
 
 ```{r eta_vs_cat_plots, echo = params$include_code, message = FALSE}
 if (length(params$etas) > 1) {
-  p <- purrr::map(.x = ca, ~ map_eta_cat(.x, params$etas, id)) 
+  p <- purrr::map(.x = ca, ~ map_eta_cat(.x, params$etas, id))
 } else {
-  ## CHECK: depending on the labels, this may need to be changed 
+  ## CHECK: depending on the labels, this may need to be changed
   p <- purrr::map(.x = ca, ~ eta_cat(id, .x, params$etas) + rot_x(35))
 }
 
-pList <- pm_grid(list(p[[1]], p[[2]]), nrow = 2, ncol = 1) 
-
+pList <- pm_grid(list(p[[1]], p[[2]]), nrow = 2, ncol = 1)
 ```
 
 ```{r include_eta_vs_cat, eval = params$include_plots, include = params$include_plots, echo = F, message = FALSE}
@@ -1199,7 +1171,7 @@ p
 
 ```{r save_eta_vs_cat, include = FALSE, eval = params$run_mrggsave, message = FALSE}
 ## As of mrggsave v0.4.0, if you pass mrggsave a named list of plots, it will use this to
-## name the plots that it writes out (regardless of whether stem is defined). 
+## name the plots that it writes out (regardless of whether stem is defined).
 ## If you don't want to use this feature, you can pass unname(p), instead of just p
 mrggsave(
   list(pList, unname(p)),
@@ -1219,5 +1191,3 @@ Sys.getenv("AMI_NAME")
 sessioninfo::session_info()
 bbr::bbi_version()
 ```
-
-
